--- a/style.css
+++ b/style.css
@@ -1,10 +1,62 @@
 body {
-    background: whitesmoke;
+    margin: 0;
+    padding: 0;
+    background: url(palmtree.jpg) no-repeat;
+    background-size: cover;
+    background-position: right;
 }
 
-h1 {
-    text-align: center;
-    background-color: chocolate;
-    cursor: grabbing;
-    color: khaki;
+.name {
+    width: 450px;
+    background: rgba(8, 212, 226, 0.4);
+    padding: 40px;
+    text-align: left;
+    margin: auto;
+    margin-top: 5%;
+    color: white;
+    font-family: 'Century Gothic', sans-serif;
+}
+
+.name-img {
+    border-radius: 30%;
+    width: 200px;
+}
+
+.name h1 {
+    font-size: 50px;
+    letter-spacing: 5px;
+    font-weight: 200;
+
+}
+
+.name h5 {
+    font-size: 25px;
+    letter-spacing: 4px;
+    font-weight: 200;
+}
+
+.name p {
+    text-align: justify;
+}
+
+ul {
+    margin: 0;
+    padding: 0;
+}
+
+.name li {
+    display: inline-block;
+    margin: 6px;
+    list-style: none;
+}
+
+.name li a {
+    color: white;
+    text-decoration: none;
+    font-size: 60px;
+    transition: all ease-in-out 250ms;
+}
+
+.name li a:hover {
+    color: rgb(24, 224, 164);
 }
