--- a/style.css
+++ b/style.css
@@ -154,4 +154,8 @@ body.dark-theme a:hover {
 }
 
 
+/* Trying to locate my time class = Not working yet */
+/* body.root.time p {
+    color: red;
+} */
 
