--- a/style.css
+++ b/style.css
@@ -40,8 +40,9 @@ body.dark-theme p {
 /* Default colors */
 body {
     color: var(--text-color);
-    background: var(--bkg-color);
-} 
+    background: var(--bkg-color); 
+}
+
 /* Dark theme colors */
 body.dark-theme {
     --text-color: #eee;
@@ -154,5 +155,48 @@ body.dark-theme a:hover {
 }
 
 
+/* 3D Tiltable Element */
+.box {
+    display: flex;
+    position: relative; 
+    align-items: center;
+    justify-content: center; 
+    width: 32rem;
+    height: 20rem;
+    background: linear-gradient(60deg,#8E36D6,#5b03a3,#58cde8,#007f9c,#004757);
+    transform: perspective(1000px);
+    transform-style: preserve-3d;
+    border-radius: 20px;
+    box-shadow: 0 15px 40px rgba(0, 0, 0, 0.20),
+                0 15px 12px rgba(0, 0, 0, 0.15);
+    transition: all 180ms ease-out;
+    float: right;
+    cursor: pointer;
+}
 
+.box h1 {
+    color: #fff;
+    font-size: 2.2rem;
+    font-weight: 600;
+    font-family: poppins;
+    text-shadow: 0 0 22px rgba(0, 0, 0, 0.6);
+    transform: translateZ(40px);
+}
+
+.circle {
+    position: absolute;
+    top: 1rem;
+    right: 2rem;
+}
+
+.circle span {
+    display: inline-flex;
+    width: 0.5rem;
+    height: 0.5rem;
+    margin: 0 0.1rem;
+    border-radius: 25px;
+    background: #ffffff;
+    box-shadow: 0 0 22px rgba(0, 0, 0, 0.7);
+    transform: translateZ(40px);
+}
 
